deploy: a1789bcbb56be9369e61648c9ad079e447319e28

--- a/community/index.html
+++ b/community/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset=utf-8>
 <title>Community - Asahi Linux</title>
-<link rel=stylesheet href=/css/main.css?f12204c4>
+<link rel=stylesheet href=/css/main.css?88fbbb4a>
 <link href=https://use.fontawesome.com/releases/v5.6.1/css/all.css rel=stylesheet>
 <link rel=preconnect href=https://fonts.gstatic.com>
 <link id=favicon rel=icon href=/img/AsahiLinux_logomark_32px.png>
@@ -31,6 +31,7 @@
 <li><a href=/contribute>Contribute</a></li>
 <li><a href=https://github.com/AsahiLinux>GitHub</a></li>
 <li><a href=https://github.com/AsahiLinux/docs/wiki>Wiki</a></li>
+<li><a href=/blog>Blog</a></li>
 <li><a href=/support>Donate</a></li>
 </ul>
 </div>
