deploy: f2937f78ead76fc2815a3de6e89c67914736ba71

--- a/about/index.html
+++ b/about/index.html
@@ -50,12 +50,12 @@
 <p>The Asahi Linux logo and website were designed by <a href=https://soundflora.tokyo>soundflora*</a>. You can find the logo artwork <a href=https://github.com/AsahiLinux/artwork/tree/main/logos>here</a>.</p>
 <h1 id=faq>FAQ</h1>
 <h2 id=what-devices-will-be-supported>What devices will be supported?</h2>
-<p>All Apple M1 macs are in scope, as well as future generations as development time permits. The first target will be the M1 Mac Mini.</p>
+<p>All Apple M1 Macs are in scope, as well as future generations as development time permits. The first target will be the M1 Mac Mini.</p>
 <h2 id=is-this-a-linux-distribution>Is this a Linux distribution?</h2>
 <p>Asahi Linux is an overall project to develop support for these Macs. We will eventually release a remix of <a href=https://archlinuxarm.org/>Arch Linux ARM</a>, packaged for installation by end-users, as a distribution of the same name. The majority of the work resides in hardware support, drivers, and tools, and it will be upstreamed to the relevant projects. The distribution will be a convenient package for easy installation by end-users and give them access to bleeding-edge versions of the software we develop.</p>
 <p>We expect that support will eventually trickle up and back down to other distributions. Advanced users will always be free to use the distribution of their choice and add the necessary patches/software themselves before this happens.</p>
 <h2 id=does-apple-allow-this-dont-you-need-a-jailbreak>Does Apple allow this? Don&rsquo;t you need a jailbreak?</h2>
-<p>Apple allows booting unsigned/custom kernels on Apple Silicon macs without a jailbreak! This isn&rsquo;t a hack or an omission, but an actual feature that Apple built into these devices. That means that, unlike iOS devices, Apple does not intend to lock down what OS you can use on Macs (though they probably won&rsquo;t help with the development).</p>
+<p>Apple allows booting unsigned/custom kernels on Apple Silicon Macs without a jailbreak! This isn&rsquo;t a hack or an omission, but an actual feature that Apple built into these devices. That means that, unlike iOS devices, Apple does not intend to lock down what OS you can use on Macs (though they probably won&rsquo;t help with the development).</p>
 <h2 id=is-this-legal>Is this legal?</h2>
 <p>As long as no code is taken from macOS to build the Linux support, the result is completely legal to distribute and for end-users to use, as it would not be a derivative work of macOS. Please see our <a href=/copyright>Copyright & Reverse Engineering Policy</a> for more information.</p>
 <h2 id=how-will-this-be-released>How will this be released?</h2>
