deploy: 55c44b33ab7fedae9b750cf5191e3e7ec47e9018

--- a/community/index.html
+++ b/community/index.html
@@ -41,7 +41,7 @@
 <div class=post>
 <h1 id=community>Community</h1>
 <p>If you&rsquo;re interested in the project, you&rsquo;re welcome to drop by! Check out <a href=/contribute>ways in which you can contribute</a>.</p>
-<p>Please rememeber that all community members are expected to abide by our <a href=/code-of-conduct>Code of Conduct</a>.</p>
+<p>Please remember that all community members are expected to abide by our <a href=/code-of-conduct>Code of Conduct</a>.</p>
 <h2 id=irc>IRC</h2>
 <p>Most development and project discussion takes place on IRC. We have several channels on the Freenode IRC network:</p>
 <ul>
