deploy: 0fe0460a23f242824c3fbd954298ef42d0ad2597

--- a/support/index.html
+++ b/support/index.html
@@ -40,7 +40,7 @@
 <div class=post-wrapper>
 <div class=post>
 <h1 id=support-asahi-linux>Support Asahi Linux</h1>
-<p>Asahi Linux was started by marcan as a Patreon-funded project, and he is currently aiming to raise enough pledges to allow him to work on Asahi Linux full-time on both Patreon and GitHub sponsors. If you would like to contribute to this cause financially, head over to <a href=https://patreon.com/marcan>the patreon campaign</a> or the <a href=https://github.com/sponsors/marcan>GitHub sponsors</a> page. To make a one-time donation or for other arrangements, please contact <a href=mailto:marcan@marcan.st>marcan</a> directly.</p>
+<p>Asahi Linux was started by marcan as a Patreon-funded project, and he is currently aiming to raise enough pledges to allow him to work on Asahi Linux full-time on both Patreon and GitHub sponsors. If you would like to contribute to this cause financially, head over to <a href=https://patreon.com/marcan>the Patreon campaign</a> or the <a href=https://github.com/sponsors/marcan>GitHub sponsors</a> page. To make a one-time donation or for other arrangements, please contact <a href=mailto:marcan@marcan.st>marcan</a> directly.</p>
 <p>Porting Linux to Apple Silicon is no small task - certainly not something that can be accomplished only with spare-time hacking. Having one full-time dedicated developer on the project will allow it to advance at a steady pace and ensure that everything is paid the proper attention.</p>
 <p>Excess funds will be used to support the project in other ways, and to fund other contributors and other projects that Asahi Linux depends on as things advance.</p>
 </div>
