--- a/community/index.html
+++ b/community/index.html
@@ -43,15 +43,15 @@
 <p>If you&rsquo;re interested in the project, you&rsquo;re welcome to drop by! Check out <a href=/contribute>ways in which you can contribute</a>.</p>
 <p>Please remember that all community members are expected to abide by our <a href=/code-of-conduct>Code of Conduct</a>.</p>
 <h2 id=irc>IRC</h2>
-<p>Most development and project discussion takes place on IRC. We have several channels on the Freenode IRC network:</p>
+<p>Most development and project discussion takes place on IRC. We have several channels on the OFTC IRC network:</p>
 <ul>
-<li>#asahi [<a href=https://freenode.irclog.whitequark.org/asahi>logs</a> · <a href=https://matrix.to/#freenode_#asahi:matrix.org>matrix</a>] - General project discussion</li>
-<li>#asahi-dev [<a href=https://freenode.irclog.whitequark.org/asahi-dev>logs</a> · <a href=https://matrix.to/#freenode_#asahi-dev:matrix.org>matrix</a>] - Development discussion</li>
-<li>#asahi-re [<a href=https://freenode.irclog.whitequark.org/asahi-re>logs</a> · <a href=https://matrix.to/#freenode_#asahi-re:matrix.org>matrix</a>] - Reverse engineering (hardware/firmware interfaces/etc)</li>
-<li>#asahi-gpu [<a href=https://freenode.irclog.whitequark.org/asahi-gpu>logs</a> · <a href=https://matrix.to/#freenode_#asahi-gpu:matrix.org>matrix</a>] - GPU reverse engineering and development</li>
+<li>#asahi [<a href=https://oftc.irclog.whitequark.org/asahi>logs</a> · <a href=https://matrix.to/#_oftc_#asahi:matrix.org>matrix</a>] - General project discussion</li>
+<li>#asahi-dev [<a href=https://oftc.irclog.whitequark.org/asahi-dev>logs</a> · <a href=https://matrix.to/#_oftc_#asahi-dev:matrix.org>matrix</a>] - Development discussion</li>
+<li>#asahi-re [<a href=https://oftc.irclog.whitequark.org/asahi-re>logs</a> · <a href=https://matrix.to/#_oftc_#asahi-re:matrix.org>matrix</a>] - Reverse engineering (hardware/firmware interfaces/etc)</li>
+<li>#asahi-gpu [<a href=https://oftc.irclog.whitequark.org/asahi-gpu>logs</a> · <a href=https://matrix.to/#_oftc_#asahi-gpu:matrix.org>matrix</a>] - GPU reverse engineering and development</li>
 </ul>
 <p>Even if you don&rsquo;t plan to speak, feel free to join and idle in the above channels if you&rsquo;d like to follow the discussion.</p>
-<p>There is also a <a href=https://matrix.org/blog/2015/06/22/the-matrix-org-irc-bridge-now-bridges-all-of-freenode>Matrix to Freenode bridge</a> that you can use to join the above channels from Matrix. You can click the links labelled &lsquo;matrix&rsquo; to join the respective rooms.</p>
+<p>There is also a <a href=https://medium.com/@RiotChat/new-irc-integrations-oftc-and-snoonet-b88883a58303>Matrix to OFTC bridge</a> that you can use to join the above channels from Matrix. You can click the links labelled &lsquo;matrix&rsquo; to join the respective rooms.</p>
 <h2 id=wiki>Wiki</h2>
 <p>Our working documentation is maintained in a <a href=https://github.com/AsahiLinux/docs/wiki/>GitHub Wiki</a>.</p>
 <h2 id=twitter>Twitter</h2>
