deploy: 1c5630e324c2453a021f77cfb4e14455fe0532f9

--- a/community/index.html
+++ b/community/index.html
@@ -52,6 +52,7 @@
 </ul>
 <p>Even if you don&rsquo;t plan to speak, feel free to join and idle in the above channels if you&rsquo;d like to follow the discussion.</p>
 <p>There is also a <a href=https://medium.com/@RiotChat/new-irc-integrations-oftc-and-snoonet-b88883a58303>Matrix to OFTC bridge</a> that you can use to join the above channels from Matrix. You can click the links labelled &lsquo;matrix&rsquo; to join the respective rooms.</p>
+<p><strong>Note: Due to spambot attacks, we currently only allow users connecting with TLS to join the channels. Please make sure your IRC client is set to enable TLS and connect to irc.oftc.net on port 6697</strong>.</p>
 <h2 id=wiki>Wiki</h2>
 <p>Our working documentation is maintained in a <a href=https://github.com/AsahiLinux/docs/wiki/>GitHub Wiki</a>.</p>
 <h2 id=twitter>Twitter</h2>
