deploy: 38ee3a8c88bb24293a880e99b3c005469f89c15e

--- a/community/index.html
+++ b/community/index.html
@@ -49,6 +49,7 @@
 <li>#asahi-dev [<a href=https://oftc.irclog.whitequark.org/asahi-dev>logs</a> · <a href=https://matrix.to/#_oftc_#asahi-dev:matrix.org>matrix</a>] - Development discussion</li>
 <li>#asahi-re [<a href=https://oftc.irclog.whitequark.org/asahi-re>logs</a> · <a href=https://matrix.to/#_oftc_#asahi-re:matrix.org>matrix</a>] - Reverse engineering (hardware/firmware interfaces/etc)</li>
 <li>#asahi-gpu [<a href=https://oftc.irclog.whitequark.org/asahi-gpu>logs</a> · <a href=https://matrix.to/#_oftc_#asahi-gpu:matrix.org>matrix</a>] - GPU reverse engineering and development</li>
+<li>#asahi-stream - Chatroom for people to talk during the devs' video streams</li>
 </ul>
 <p>Even if you don&rsquo;t plan to speak, feel free to join and idle in the above channels if you&rsquo;d like to follow the discussion.</p>
 <p>There is also a <a href=https://medium.com/@RiotChat/new-irc-integrations-oftc-and-snoonet-b88883a58303>Matrix to OFTC bridge</a> that you can use to join the above channels from Matrix. You can click the links labelled &lsquo;matrix&rsquo; to join the respective rooms.</p>
