deploy: 429d238f128fbff109a14e7e54a220d86995eee4

--- a/community/index.html
+++ b/community/index.html
@@ -45,11 +45,11 @@
 <h2 id=irc>IRC</h2>
 <p>Most development and project discussion takes place on IRC. We have several channels on the OFTC IRC network:</p>
 <ul>
-<li>#asahi [<a href=https://oftc.irclog.whitequark.org/asahi>logs</a> · <a href=https://matrix.to/#_oftc_#asahi:matrix.org>matrix</a>] - General project discussion</li>
-<li>#asahi-dev [<a href=https://oftc.irclog.whitequark.org/asahi-dev>logs</a> · <a href=https://matrix.to/#_oftc_#asahi-dev:matrix.org>matrix</a>] - Development discussion</li>
-<li>#asahi-re [<a href=https://oftc.irclog.whitequark.org/asahi-re>logs</a> · <a href=https://matrix.to/#_oftc_#asahi-re:matrix.org>matrix</a>] - Reverse engineering (hardware/firmware interfaces/etc)</li>
-<li>#asahi-gpu [<a href=https://oftc.irclog.whitequark.org/asahi-gpu>logs</a> · <a href=https://matrix.to/#_oftc_#asahi-gpu:matrix.org>matrix</a>] - GPU reverse engineering and development</li>
-<li>#asahi-stream - Chatroom for people to talk during the devs' video streams</li>
+<li>#asahi [<a href=https://oftc.irclog.whitequark.org/asahi>logs</a> · <a href=https://matrix.to/#/#_oftc_#asahi:matrix.org>matrix</a>] - General project discussion</li>
+<li>#asahi-dev [<a href=https://oftc.irclog.whitequark.org/asahi-dev>logs</a> · <a href=https://matrix.to/#/#_oftc_#asahi-dev:matrix.org>matrix</a>] - Development discussion</li>
+<li>#asahi-re [<a href=https://oftc.irclog.whitequark.org/asahi-re>logs</a> · <a href=https://matrix.to/#/#_oftc_#asahi-re:matrix.org>matrix</a>] - Reverse engineering (hardware/firmware interfaces/etc)</li>
+<li>#asahi-gpu [<a href=https://oftc.irclog.whitequark.org/asahi-gpu>logs</a> · <a href=https://matrix.to/#/#_oftc_#asahi-gpu:matrix.org>matrix</a>] - GPU reverse engineering and development</li>
+<li>#asahi-stream [<a href=https://matrix.to/#/#_oftc_#asahi-stream:matrix.org>matrix</a>] - Chatroom for people to talk during the devs' video streams</li>
 </ul>
 <p>Even if you don&rsquo;t plan to speak, feel free to join and idle in the above channels if you&rsquo;d like to follow the discussion.</p>
 <p>There is also a <a href=https://medium.com/@RiotChat/new-irc-integrations-oftc-and-snoonet-b88883a58303>Matrix to OFTC bridge</a> that you can use to join the above channels from Matrix. You can click the links labelled &lsquo;matrix&rsquo; to join the respective rooms.</p>
