--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta name=generator content="Hugo 0.87.0">
 <meta charset=utf-8>
 <title>Asahi Linux</title>
-<link rel=stylesheet href=/css/main.css?631df312>
+<link rel=stylesheet href=/css/main.css?9f957697>
 <link href=https://use.fontawesome.com/releases/v5.6.1/css/all.css rel=stylesheet>
 <link rel=preconnect href=https://fonts.gstatic.com>
 <link id=favicon rel=icon href=/img/AsahiLinux_logomark_32px.png>
@@ -47,6 +47,16 @@
 <div>
 <img src=/img/asahilinux_laptop.svg?763d4e1d alt="Asahi Linux on a laptop">
 </div>
+</div>
+</section>
+<section id=download>
+<div class=center-title>
+<h1>Download</h1>
+</div>
+<div class="download-card center-card">
+<i class="big-icon fas fa-arrow-down"></i>
+<p>The Asahi Linux alpha release is out!</p>
+<a href=/2021/12/asahi-linux-alpha-release/ class=more>Check out the announcement<i class="fas fa-angle-right more"></i></a>
 </div>
 </section>
 <section id=community class=white-text>
