deploy: 04c16532e7dc80a129e3e46a30f6b11fcb6287d0

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta name=generator content="Hugo 0.87.0">
 <meta charset=utf-8>
 <title>Asahi Linux</title>
-<link rel=stylesheet href=/css/main.css?9f957697>
+<link rel=stylesheet href=/css/main.css?ebc0d811>
 <link href=https://use.fontawesome.com/releases/v5.6.1/css/all.css rel=stylesheet>
 <link rel=preconnect href=https://fonts.gstatic.com>
 <link id=favicon rel=icon href=/img/AsahiLinux_logomark_32px.png>
@@ -66,17 +66,27 @@
 <div class=community-links>
 <div class=community-twitter>
 <div class=community-card>
+<div class=community-icons>
 <i class="big-icon fab fa-twitter"></i>
-<p>Follow us on Twitter to get announcements and other information.</p>
+<i class="big-icon fab fa-mastodon"></i>
 </div>
-<div class="community-button twitter-button">
-<a href=https://twitter.com/AsahiLinux class=rounded-button><i class="fab fa-twitter"></i> @AsahiLinux</a>
+<div class=community-text>
+<p>Follow us on Mastodon or Twitter to get announcements and other information.</p>
+</div>
+</div>
+<div class="community-button twitter-buttons">
+<a rel=me href=https://social.treehouse.systems/@AsahiLinux class="mastodon-button rounded-button"><i class="fab fa-mastodon"></i> @AsahiLinux<wbr>@treehouse.systems</a>
+<a rel=me href=https://twitter.com/AsahiLinux class="twitter-button rounded-button"><i class="fab fa-twitter"></i> @AsahiLinux</a>
 </div>
 </div>
 <div class=community-chat>
 <div class=community-card>
+<div class=community-icons>
 <i class="big-icon fas fa-hashtag"></i>
+</div>
+<div class=community-text>
 <p>Our primary communications platform is IRC on OFTC.</p>
+</div>
 </div>
 <div class="community-button chat-button">
 <a href=/community class=rounded-button><i class="fas fa-hashtag"></i> Channel list</a>
