--- a/about/index.html
+++ b/about/index.html
@@ -69,7 +69,10 @@
 <p>Hector Martin &ldquo;marcan&rdquo;, the Asahi project lead. marcan is a seasoned reverse engineer and developer with more than 15 years of experience porting Linux and running unofficial software on undocumented and/or closed devices. This is his most ambitious project yet, and he is funding the effort via <a href=/support>community donations and sponsorship</a>. His previous projects include <a href=https://github.com/fail0verflow/ps4-linux>PS4 Linux</a>, a Linux port to the proprietary hardware found on the PS4, capable of full 3D acceleration using OpenGL and Vulkan (radeon/amdgpu drivers); <a href=https://github.com/marcan/asbestos>AsbestOS</a>, a PS3 Linux bootloader for GameOS mode, and associated kernel patches to make Linux work on the PS3 Slim; and numerous contributions to the <a href=https://wiibrew.org/>Wii Homebrew ecosystem</a>, including being part of the team that developed <a href=https://wiibrew.org/wiki/Homebrew_Channel>The Homebrew Channel</a> and <a href=https://wiibrew.org/wiki/BootMii>BootMii</a>, documenting much of the hardware, and contributing to open homebrew SDK tooling.</p>
 </li>
 <li>
-<p>Alyssa Rosenzweig, the Asahi GPU lead. Alyssa is a Linux graphics hacker known for her work on reverse-engineering the Arm Mali GPUs to build the free Panfrost driver. She is an upstream Mesa3D developer, maintaining both the Panfrost and Asahi drivers.</p>
+<p>Alyssa Rosenzweig, the Asahi GPU lead. Alyssa is a Linux graphics hacker known for her work on reverse-engineering the Arm Mali GPUs to build the free Panfrost driver. She is an upstream Mesa3D developer, maintaining both the Panfrost and Asahi Mesa drivers.</p>
+</li>
+<li>
+<p>Asahi Lina, our GPU kernel mage. Lina joined the team to reverse engineer the M1 GPU kernel interface, and found herself writing the world&rsquo;s first Rust Linux GPU kernel driver. When she&rsquo;s not working on the Asahi DRM kernel driver, she sometimes hacks on open source VTuber tooling and infrastructure.</p>
 </li>
 <li>
 <p>Dougall Johnson &ldquo;dougallj&rdquo;, instruction set architecture extraordinaire. Dougall reverse-engineered much of the instruction set of the Apple GPU and has analyzed the timing of the Apple M1&rsquo;s CPU cores to infer microarchitectural details.</p>
