deploy: 3d65cebcfe5feb267a8d22ff426180a463604ba7

--- a/about/index.html
+++ b/about/index.html
@@ -72,7 +72,7 @@
 <p>Alyssa Rosenzweig, the Asahi GPU lead. Alyssa is a Linux graphics hacker known for her work on reverse-engineering the Arm Mali GPUs to build the free Panfrost driver. She is an upstream Mesa3D developer, maintaining both the Panfrost and Asahi Mesa drivers.</p>
 </li>
 <li>
-<p>Asahi Lina, our GPU kernel mage. Lina joined the team to reverse engineer the M1 GPU kernel interface, and found herself writing the world&rsquo;s first Rust Linux GPU kernel driver. When she&rsquo;s not working on the Asahi DRM kernel driver, she sometimes hacks on open source VTuber tooling and infrastructure.</p>
+<p>Asahi Lina, our GPU kernel sourceress. Lina joined the team to reverse engineer the M1 GPU kernel interface, and found herself writing the world&rsquo;s first Rust Linux GPU kernel driver. When she&rsquo;s not working on the Asahi DRM kernel driver, she sometimes hacks on open source VTuber tooling and infrastructure.</p>
 </li>
 <li>
 <p>Dougall Johnson &ldquo;dougallj&rdquo;, instruction set architecture extraordinaire. Dougall reverse-engineered much of the instruction set of the Apple GPU and has analyzed the timing of the Apple M1&rsquo;s CPU cores to infer microarchitectural details.</p>
