deploy: f3780b2646c8fa09fecbcafc96946c3d71b17652

--- a/about/index.html
+++ b/about/index.html
@@ -66,22 +66,28 @@
 <p>Asahi Linux is a community, and everyone is invited to contribute. If you are interested in contributing, check out our <a href=/contribute>contribute page</a>! Major contributors are:</p>
 <ul>
 <li>
-<p>Hector Martin &ldquo;marcan&rdquo;, the Asahi project lead. marcan is a seasoned reverse engineer and developer with more than 15 years of experience porting Linux and running unofficial software on undocumented and/or closed devices. This is his most ambitious project yet, and he is funding the effort via <a href=/support>community donations and sponsorship</a>. His previous projects include <a href=https://github.com/fail0verflow/ps4-linux>PS4 Linux</a>, a Linux port to the proprietary hardware found on the PS4, capable of full 3D acceleration using OpenGL and Vulkan (radeon/amdgpu drivers); <a href=https://github.com/marcan/asbestos>AsbestOS</a>, a PS3 Linux bootloader for GameOS mode, and associated kernel patches to make Linux work on the PS3 Slim; and numerous contributions to the <a href=https://wiibrew.org/>Wii Homebrew ecosystem</a>, including being part of the team that developed <a href=https://wiibrew.org/wiki/Homebrew_Channel>The Homebrew Channel</a> and <a href=https://wiibrew.org/wiki/BootMii>BootMii</a>, documenting much of the hardware, and contributing to open homebrew SDK tooling.</p>
+<p><a href=https://github.com/marcan>Hector Martin &ldquo;marcan&rdquo;</a>, the Asahi project lead. marcan is a seasoned reverse engineer and developer with more than 15 years of experience porting Linux and running unofficial software on undocumented and/or closed devices. This is his most ambitious project yet, and he is funding the effort via <a href=/support>community donations and sponsorship</a>. His previous projects include <a href=https://github.com/fail0verflow/ps4-linux>PS4 Linux</a>, a Linux port to the proprietary hardware found on the PS4, capable of full 3D acceleration using OpenGL and Vulkan (radeon/amdgpu drivers); <a href=https://github.com/marcan/asbestos>AsbestOS</a>, a PS3 Linux bootloader for GameOS mode, and associated kernel patches to make Linux work on the PS3 Slim; and numerous contributions to the <a href=https://wiibrew.org/>Wii Homebrew ecosystem</a>, including being part of the team that developed <a href=https://wiibrew.org/wiki/Homebrew_Channel>The Homebrew Channel</a> and <a href=https://wiibrew.org/wiki/BootMii>BootMii</a>, documenting much of the hardware, and contributing to open homebrew SDK tooling.</p>
 </li>
 <li>
-<p>Alyssa Rosenzweig, the Asahi GPU lead. Alyssa is a Linux graphics hacker known for her work on reverse-engineering the Arm Mali GPUs to build the free Panfrost driver. She is an upstream Mesa3D developer, maintaining both the Panfrost and Asahi Mesa drivers.</p>
+<p><a href=https://rosenzweig.io/>Alyssa Rosenzweig</a>, the Asahi GPU lead. Alyssa is a Linux graphics hacker known for her work on reverse-engineering the Arm Mali GPUs to build the free Panfrost driver. She is an upstream Mesa3D developer, maintaining both the Panfrost and Asahi Mesa drivers.</p>
 </li>
 <li>
-<p>Asahi Lina, our GPU kernel sourceress. Lina joined the team to reverse engineer the M1 GPU kernel interface, and found herself writing the world&rsquo;s first Rust Linux GPU kernel driver. When she&rsquo;s not working on the Asahi DRM kernel driver, she sometimes hacks on open source VTuber tooling and infrastructure.</p>
+<p><a href=https://github.com/asahilina>Asahi Lina</a>, our GPU kernel sourceress. Lina joined the team to reverse engineer the M1 GPU kernel interface, and found herself writing the world&rsquo;s first Rust Linux GPU kernel driver. When she&rsquo;s not working on the Asahi DRM kernel driver, she sometimes hacks on open source VTuber tooling and infrastructure.</p>
 </li>
 <li>
-<p>Dougall Johnson &ldquo;dougallj&rdquo;, instruction set architecture extraordinaire. Dougall reverse-engineered much of the instruction set of the Apple GPU and has analyzed the timing of the Apple M1&rsquo;s CPU cores to infer microarchitectural details.</p>
+<p><a href=https://github.com/dougallj>Dougall Johnson &ldquo;dougallj&rdquo;</a>, instruction set architecture extraordinaire. Dougall reverse-engineered much of the instruction set of the Apple GPU and has analyzed the timing of the Apple M1&rsquo;s CPU cores to infer microarchitectural details.</p>
 </li>
 <li>
-<p>Sven Peter. Sven has worked tirelessly on upstream Linux support for Apple&rsquo;s Device Address Resolution Table (DART) required for USB, PCIe, Ethernet, and Wi-Fi. He also added USB gadget support to m1n1.</p>
+<p><a href=https://github.com/svenpeter42>Sven Peter</a>. Sven has worked tirelessly on upstream Linux support for Apple&rsquo;s Device Address Resolution Table (DART) required for USB, PCIe, Ethernet, and Wi-Fi. He also added USB gadget support to m1n1, and is now working on DisplayPort and Thunderbolt support.</p>
 </li>
 <li>
-<p>Mark Kettenis, OpenBSD developer. Mark has written m1n1 and U-Boot drivers for the Apple M1 core peripherals, including the bringup needed for PCIe and NVMe (ANS). Mark has also written OpenBSD drivers for the Apple M1 as a parallel effort to the Linux port.</p>
+<p><a href=https://github.com/kettenis>Mark Kettenis</a>, OpenBSD developer. Mark has written m1n1 and U-Boot drivers for the Apple M1 core peripherals, including the bringup needed for PCIe and NVMe (ANS). Mark has also written OpenBSD drivers for the Apple M1 as a parallel effort to the Linux port.</p>
+</li>
+<li>
+<p><a href=https://github.com/povik/>Martin Povišer</a>, who is leading our audio kernel driver effort. Martin wrote and is upstreaming the Apple-specific SoC audio drivers as well as drivers for Apple-proprietary codecs and codec variants.</p>
+</li>
+<li>
+<p><a href=https://github.com/jannau>Janne Grunau</a>, who implemented touchpad/keyboard support for the M1 series and is now maintaining the display controller (DCP) driver. He has also been involved in countless other bits and pieces, including device tree cleanup and submission.</p>
 </li>
 </ul>
 </div>
