deploy: 2b6482a898448245453878c35c68e19acb3721cb

--- a/support/index.html
+++ b/support/index.html
@@ -45,8 +45,8 @@
 <p>Excess funds will be used to support the project in other ways, and to fund other contributors and other projects that Asahi Linux depends on as things advance.</p>
 <p>Some other contributors also have their own fundraising platforms:</p>
 <ul>
-<li>Martin Povišer &ldquo;povik&rdquo;, our lead kernel audio deloper, is on [https://github.com/sponsors/povik](GitHub Sponsors).</li>
-<li>Ella Stanforth, who is working on Vulkan userspace drivers for Apple Silicon GPUs, is on [https://github.com/sponsors/Ella-0](GitHub Sponsors).</li>
+<li>Martin Povišer &ldquo;povik&rdquo;, our lead kernel audio deloper, is on <a href=ttps://github.com/sponsors/povik>GitHub Sponsors</a>.</li>
+<li>Ella Stanforth, who is working on Vulkan userspace drivers for Apple Silicon GPUs, is on <a href=https://github.com/sponsors/Ella-0>GitHub Sponsors</a>.</li>
 </ul>
 </div>
 </div>
