--- a/about/index.html
+++ b/about/index.html
@@ -1,8 +1,7 @@
 <!doctype html><html lang=en>
 <head>
 <meta charset=utf-8>
-<title>About - Asahi Linux</title>
-<link rel=stylesheet href=/css/main.css?940d905e>
+<title>About - Asahi Linux</title><link rel=stylesheet href=/css/main.css?940d905e>
 <link href=https://use.fontawesome.com/releases/v5.6.1/css/all.css rel=stylesheet>
 <link rel=preconnect href=https://fonts.gstatic.com>
 <link id=favicon rel=icon href=/img/AsahiLinux_logomark_32px.png>
@@ -18,82 +17,26 @@
 <meta name=twitter:image:height content="256">
 <meta property="og:image" content="https://asahilinux.org/img/AsahiLinux_logomark_256px.png">
 <meta property="og:title" content="About - Asahi Linux">
-</head>
-<body>
+</head><body>
 <header id=header>
 <div class=header-logo>
 <a href=/><img src=/img/AsahiLinux_logo.svg?d619e737 class=logo alt></a>
-</div>
-<div class=header-menu>
+</div><div class=header-menu>
 <ul class="menu-container flex-container">
-<li><a href=/about>About</a></li>
-<li><a href=/community>Community</a></li>
-<li><a href=/contribute>Contribute</a></li>
-<li><a href=https://github.com/AsahiLinux>GitHub</a></li>
-<li><a href=https://github.com/AsahiLinux/docs/wiki>Wiki</a></li>
-<li><a href=/blog>Blog</a></li>
-<li><a href=/support>Donate</a></li>
-</ul>
-</div>
-</header>
-<section id=post-section>
+<li><a href=/about>About</a></li><li><a href=/community>Community</a></li><li><a href=/contribute>Contribute</a></li><li><a href=https://github.com/AsahiLinux>GitHub</a></li><li><a href=https://github.com/AsahiLinux/docs/wiki>Wiki</a></li><li><a href=/blog>Blog</a></li><li><a href=/support>Donate</a></li></ul></div></header><section id=post-section>
 <div class=post-wrapper>
 <div class=post>
-<h1 id=about-asahi-linux>About Asahi Linux</h1>
-<p>Asahi Linux is a project and community with the goal of porting Linux to Apple Silicon Macs, starting with the 2020 M1 Mac Mini, MacBook Air, and MacBook Pro.</p>
-<p>Our goal is not just to make Linux run on these machines but to polish it to the point where it can be used as a daily OS. Doing this requires a tremendous amount of work, as Apple Silicon is an entirely undocumented platform. In particular, we will be reverse engineering the Apple GPU architecture and developing an open-source driver for it.</p>
-<p>Asahi Linux is developed by a thriving community of free and open source software developers.</p>
-<h2 id=the-name>The name</h2>
-<p>Asahi means &ldquo;rising sun&rdquo; in Japanese, and it is also the name of an apple cultivar. 旭りんご (<em>asahi ringo</em>) is what we know as the McIntosh Apple, the apple variety that gave the Mac its name.</p>
-<h2 id=the-logo>The logo</h2>
-<img src=/img/AsahiLinux_logomark.svg alt="Asahi Linux logo" width=100>
-<p>The Asahi Linux logo and website were designed by <a href=https://soundflora.tokyo>soundflora*</a>. You can find the logo artwork <a href=https://github.com/AsahiLinux/artwork/tree/main/logos>here</a>.</p>
-<h1 id=faq>FAQ</h1>
-<h2 id=what-devices-will-be-supported>What devices will be supported?</h2>
-<p>All Apple M1 Macs are in scope, as well as future generations as development time permits. The first target will be the M1 Mac Mini.</p>
-<h2 id=is-this-a-linux-distribution>Is this a Linux distribution?</h2>
-<p>Asahi Linux is an overall project to develop support for these Macs. We will eventually release a remix of <a href=https://archlinuxarm.org/>Arch Linux ARM</a>, packaged for installation by end-users, as a distribution of the same name. The majority of the work resides in hardware support, drivers, and tools, and it will be upstreamed to the relevant projects. The distribution will be a convenient package for easy installation by end-users and give them access to bleeding-edge versions of the software we develop.</p>
-<p>We expect that support will eventually trickle up and back down to other distributions. Advanced users will always be free to use the distribution of their choice and add the necessary patches/software themselves before this happens.</p>
-<h2 id=does-apple-allow-this-dont-you-need-a-jailbreak>Does Apple allow this? Don&rsquo;t you need a jailbreak?</h2>
-<p>Apple allows booting unsigned/custom kernels on Apple Silicon Macs without a jailbreak! This isn&rsquo;t a hack or an omission, but an actual feature that Apple built into these devices. That means that, unlike iOS devices, Apple does not intend to lock down what OS you can use on Macs (though they probably won&rsquo;t help with the development).</p>
-<h2 id=is-this-legal>Is this legal?</h2>
-<p>As long as no code is taken from macOS to build the Linux support, the result is completely legal to distribute and for end-users to use, as it would not be a derivative work of macOS. Please see our <a href=/copyright>Copyright & Reverse Engineering Policy</a> for more information.</p>
-<h2 id=how-will-this-be-released>How will this be released?</h2>
-<p>All development takes place on our <a href=https://github.com/AsahiLinux>GitHub</a>. All contributions will be written with the intent to upstream them into the respective upstream projects (starting with the Linux kernel) and upstreamed as early as is practical. Code will be dual-licensed as the upstream license (e.g. GPL) and a permissive license (e.g. MIT), to ensure that the work can be reused in other OSes where possible.</p>
-<h2 id=will-this-make-apple-silicon-macs-a-fully-open-platform>Will this make Apple Silicon Macs a fully open platform?</h2>
-<p>No, Apple still controls the boot process and, for example, the firmware that runs on the Secure Enclave Processor. However, no modern device is &ldquo;fully open&rdquo; - no usable computer exists today with completely open software and hardware (as much as some companies want to market themselves as such). What ends up changing is where you draw the line between closed parts and open parts. The line on Apple Silicon Macs is when the alternate kernel image is booted, while SEP firmware remains closed - which is quite similar to the line on standard PCs, where the UEFI firmware boots the OS loader, while the ME/PSP firmware remains closed. In fact, mainstream x86 platforms are arguably more intrusive because the proprietary UEFI firmware is allowed to steal the main CPU from the OS at any time via SMM interrupts, which is not the case on Apple Silicon Macs. This has real performance/stability implications; it&rsquo;s not just a philosophical issue.</p>
-<h2 id=who-is-working-on-asahi-linux>Who is working on Asahi Linux?</h2>
-<p>Asahi Linux is a community, and everyone is invited to contribute. If you are interested in contributing, check out our <a href=/contribute>contribute page</a>! Major contributors are:</p>
-<ul>
+<h1 id=about-asahi-linux>About Asahi Linux</h1><p>Asahi Linux is a project and community with the goal of porting Linux to Apple Silicon Macs, starting with the 2020 M1 Mac Mini, MacBook Air, and MacBook Pro.</p><p>Our goal is not just to make Linux run on these machines but to polish it to the point where it can be used as a daily OS. Doing this requires a tremendous amount of work, as Apple Silicon is an entirely undocumented platform. In particular, we will be reverse engineering the Apple GPU architecture and developing an open-source driver for it.</p><p>Asahi Linux is developed by a thriving community of free and open source software developers.</p><h2 id=the-name>The name</h2><p>Asahi means &ldquo;rising sun&rdquo; in Japanese, and it is also the name of an apple cultivar. 旭りんご (<em>asahi ringo</em>) is what we know as the McIntosh Apple, the apple variety that gave the Mac its name.</p><h2 id=the-logo>The logo</h2><img src=/img/AsahiLinux_logomark.svg alt="Asahi Linux logo" width=100>
+<p>The Asahi Linux logo and website were designed by <a href=https://soundflora.tokyo>soundflora*</a>. You can find the logo artwork <a href=https://github.com/AsahiLinux/artwork/tree/main/logos>here</a>.</p><h1 id=faq>FAQ</h1><h2 id=what-devices-will-be-supported>What devices will be supported?</h2><p>All Apple M1 Macs are in scope, as well as future generations as development time permits. The first target will be the M1 Mac Mini.</p><h2 id=is-this-a-linux-distribution>Is this a Linux distribution?</h2><p>Asahi Linux is an overall project to develop support for these Macs. We will eventually release a remix of <a href=https://archlinuxarm.org/>Arch Linux ARM</a>, packaged for installation by end-users, as a distribution of the same name. The majority of the work resides in hardware support, drivers, and tools, and it will be upstreamed to the relevant projects. The distribution will be a convenient package for easy installation by end-users and give them access to bleeding-edge versions of the software we develop.</p><p>We expect that support will eventually trickle up and back down to other distributions. Advanced users will always be free to use the distribution of their choice and add the necessary patches/software themselves before this happens.</p><h2 id=does-apple-allow-this-dont-you-need-a-jailbreak>Does Apple allow this? Don&rsquo;t you need a jailbreak?</h2><p>Apple allows booting unsigned/custom kernels on Apple Silicon Macs without a jailbreak! This isn&rsquo;t a hack or an omission, but an actual feature that Apple built into these devices. That means that, unlike iOS devices, Apple does not intend to lock down what OS you can use on Macs (though they probably won&rsquo;t help with the development).</p><h2 id=is-this-legal>Is this legal?</h2><p>As long as no code is taken from macOS to build the Linux support, the result is completely legal to distribute and for end-users to use, as it would not be a derivative work of macOS. Please see our <a href=/copyright>Copyright & Reverse Engineering Policy</a> for more information.</p><h2 id=how-will-this-be-released>How will this be released?</h2><p>All development takes place on our <a href=https://github.com/AsahiLinux>GitHub</a>. All contributions will be written with the intent to upstream them into the respective upstream projects (starting with the Linux kernel) and upstreamed as early as is practical. Code will be dual-licensed as the upstream license (e.g. GPL) and a permissive license (e.g. MIT), to ensure that the work can be reused in other OSes where possible.</p><h2 id=will-this-make-apple-silicon-macs-a-fully-open-platform>Will this make Apple Silicon Macs a fully open platform?</h2><p>No, Apple still controls the boot process and, for example, the firmware that runs on the Secure Enclave Processor. However, no modern device is &ldquo;fully open&rdquo; - no usable computer exists today with completely open software and hardware (as much as some companies want to market themselves as such). What ends up changing is where you draw the line between closed parts and open parts. The line on Apple Silicon Macs is when the alternate kernel image is booted, while SEP firmware remains closed - which is quite similar to the line on standard PCs, where the UEFI firmware boots the OS loader, while the ME/PSP firmware remains closed. In fact, mainstream x86 platforms are arguably more intrusive because the proprietary UEFI firmware is allowed to steal the main CPU from the OS at any time via SMM interrupts, which is not the case on Apple Silicon Macs. This has real performance/stability implications; it&rsquo;s not just a philosophical issue.</p><h2 id=who-is-working-on-asahi-linux>Who is working on Asahi Linux?</h2><p>Asahi Linux is a community, and everyone is invited to contribute. If you are interested in contributing, check out our <a href=/contribute>contribute page</a>! Major contributors are:</p><ul>
 <li>
-<p><a href=https://github.com/marcan>Hector Martin &ldquo;marcan&rdquo;</a>, the Asahi project lead. marcan is a seasoned reverse engineer and developer with more than 15 years of experience porting Linux and running unofficial software on undocumented and/or closed devices. This is his most ambitious project yet, and he is funding the effort via <a href=/support>community donations and sponsorship</a>. His previous projects include <a href=https://github.com/fail0verflow/ps4-linux>PS4 Linux</a>, a Linux port to the proprietary hardware found on the PS4, capable of full 3D acceleration using OpenGL and Vulkan (radeon/amdgpu drivers); <a href=https://github.com/marcan/asbestos>AsbestOS</a>, a PS3 Linux bootloader for GameOS mode, and associated kernel patches to make Linux work on the PS3 Slim; and numerous contributions to the <a href=https://wiibrew.org/>Wii Homebrew ecosystem</a>, including being part of the team that developed <a href=https://wiibrew.org/wiki/Homebrew_Channel>The Homebrew Channel</a> and <a href=https://wiibrew.org/wiki/BootMii>BootMii</a>, documenting much of the hardware, and contributing to open homebrew SDK tooling.</p>
-</li>
-<li>
-<p><a href=https://rosenzweig.io/>Alyssa Rosenzweig</a>, the Asahi GPU lead. Alyssa is a Linux graphics hacker known for her work on reverse-engineering the Arm Mali GPUs to build the free Panfrost driver. She is an upstream Mesa3D developer, maintaining both the Panfrost and Asahi Mesa drivers.</p>
-</li>
-<li>
-<p><a href=https://github.com/asahilina>Asahi Lina</a>, our GPU kernel sourceress. Lina joined the team to reverse engineer the M1 GPU kernel interface, and found herself writing the world&rsquo;s first Rust Linux GPU kernel driver. When she&rsquo;s not working on the Asahi DRM kernel driver, she sometimes hacks on open source VTuber tooling and infrastructure.</p>
-</li>
-<li>
-<p><a href=https://github.com/dougallj>Dougall Johnson &ldquo;dougallj&rdquo;</a>, instruction set architecture extraordinaire. Dougall reverse-engineered much of the instruction set of the Apple GPU and has analyzed the timing of the Apple M1&rsquo;s CPU cores to infer microarchitectural details.</p>
-</li>
-<li>
-<p><a href=https://github.com/svenpeter42>Sven Peter</a>. Sven has worked tirelessly on upstream Linux support for Apple&rsquo;s Device Address Resolution Table (DART) required for USB, PCIe, Ethernet, and Wi-Fi. He also added USB gadget support to m1n1, and is now working on DisplayPort and Thunderbolt support.</p>
-</li>
-<li>
-<p><a href=https://github.com/kettenis>Mark Kettenis</a>, OpenBSD developer. Mark has written m1n1 and U-Boot drivers for the Apple M1 core peripherals, including the bringup needed for PCIe and NVMe (ANS). Mark has also written OpenBSD drivers for the Apple M1 as a parallel effort to the Linux port.</p>
-</li>
-<li>
-<p><a href=https://github.com/povik/>Martin Povišer</a>, who is leading our audio kernel driver effort. Martin wrote and is upstreaming the Apple-specific SoC audio drivers as well as drivers for Apple-proprietary codecs and codec variants.</p>
-</li>
-<li>
-<p><a href=https://github.com/jannau>Janne Grunau</a>, who implemented touchpad/keyboard support for the M1 series and is now maintaining the display controller (DCP) driver. He has also been involved in countless other bits and pieces, including device tree cleanup and submission.</p>
-</li>
-</ul>
-</div>
-</div>
-</section>
-<footer id=footer>
+<p><a href=https://github.com/marcan>Hector Martin &ldquo;marcan&rdquo;</a>, the Asahi project lead. marcan is a seasoned reverse engineer and developer with more than 15 years of experience porting Linux and running unofficial software on undocumented and/or closed devices. This is his most ambitious project yet, and he is funding the effort via <a href=/support>community donations and sponsorship</a>. His previous projects include <a href=https://github.com/fail0verflow/ps4-linux>PS4 Linux</a>, a Linux port to the proprietary hardware found on the PS4, capable of full 3D acceleration using OpenGL and Vulkan (radeon/amdgpu drivers); <a href=https://github.com/marcan/asbestos>AsbestOS</a>, a PS3 Linux bootloader for GameOS mode, and associated kernel patches to make Linux work on the PS3 Slim; and numerous contributions to the <a href=https://wiibrew.org/>Wii Homebrew ecosystem</a>, including being part of the team that developed <a href=https://wiibrew.org/wiki/Homebrew_Channel>The Homebrew Channel</a> and <a href=https://wiibrew.org/wiki/BootMii>BootMii</a>, documenting much of the hardware, and contributing to open homebrew SDK tooling.</p></li><li>
+<p><a href=https://rosenzweig.io/>Alyssa Rosenzweig</a>, the Asahi GPU lead. Alyssa is a Linux graphics hacker known for her work on reverse-engineering the Arm Mali GPUs to build the free Panfrost driver. She is an upstream Mesa3D developer, maintaining both the Panfrost and Asahi Mesa drivers.</p></li><li>
+<p><a href=https://github.com/asahilina>Asahi Lina</a>, our GPU kernel sourceress. Lina joined the team to reverse engineer the M1 GPU kernel interface, and found herself writing the world&rsquo;s first Rust Linux GPU kernel driver. When she&rsquo;s not working on the Asahi DRM kernel driver, she sometimes hacks on open source VTuber tooling and infrastructure.</p></li><li>
+<p><a href=https://github.com/dougallj>Dougall Johnson &ldquo;dougallj&rdquo;</a>, instruction set architecture extraordinaire. Dougall reverse-engineered much of the instruction set of the Apple GPU and has analyzed the timing of the Apple M1&rsquo;s CPU cores to infer microarchitectural details.</p></li><li>
+<p><a href=https://github.com/svenpeter42>Sven Peter</a>. Sven has worked tirelessly on upstream Linux support for Apple&rsquo;s Device Address Resolution Table (DART) required for USB, PCIe, Ethernet, and Wi-Fi. He also added USB gadget support to m1n1, and is now working on DisplayPort and Thunderbolt support.</p></li><li>
+<p><a href=https://github.com/kettenis>Mark Kettenis</a>, OpenBSD developer. Mark has written m1n1 and U-Boot drivers for the Apple M1 core peripherals, including the bringup needed for PCIe and NVMe (ANS). Mark has also written OpenBSD drivers for the Apple M1 as a parallel effort to the Linux port.</p></li><li>
+<p><a href=https://github.com/povik/>Martin Povišer</a>, who is leading our audio kernel driver effort. Martin wrote and is upstreaming the Apple-specific SoC audio drivers as well as drivers for Apple-proprietary codecs and codec variants.</p></li><li>
+<p><a href=https://github.com/jannau>Janne Grunau</a>, who implemented touchpad/keyboard support for the M1 series and is now maintaining the display controller (DCP) driver. He has also been involved in countless other bits and pieces, including device tree cleanup and submission.</p></li></ul></div></div></section><footer id=footer>
 <div class=footer-menu>
 <div class=footer-logo>
 <a href=/>
@@ -101,20 +44,7 @@
 </a>
 <span class=license>Licensed under CC BY-SA 4.0</span>
 <span class=disclaimer>Linux® is the registered trademark of Linus Torvalds in the U.S. and other countries. All other product names, logos, and brands are property of their respective owners.</span>
-</div>
-<div class=footer-links>
+</div><div class=footer-links>
 <ul class=footer-services>
-<li><a href=https://twitter.com/AsahiLinux><i class="fab fa-twitter"></i></a></li>
-<li><a href=https://github.com/AsahiLinux><i class="fab fa-github"></i></a></li>
-<li><a href=https://www.patreon.com/marcan><i class="fab fa-patreon"></i></a></li>
-</ul>
-<ul class=footer-menu-container>
-<li><a href=/about>About</a></li>
-<li><a href=/code-of-conduct>Code of Conduct</a></li>
-<li><a href=/copyright>Copyright policy</a></li>
-</ul>
-</div>
-</div>
-</footer>
-</body>
-</html>
+<li><a href=https://twitter.com/AsahiLinux><i class="fab fa-twitter"></i></a></li><li><a href=https://github.com/AsahiLinux><i class="fab fa-github"></i></a></li><li><a href=https://www.patreon.com/marcan><i class="fab fa-patreon"></i></a></li></ul><ul class=footer-menu-container>
+<li><a href=/about>About</a></li><li><a href=/code-of-conduct>Code of Conduct</a></li><li><a href=/copyright>Copyright policy</a></li></ul></div></div></footer></body></html>
