--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!doctype html><html lang=en>
 <head>
-<meta name=generator content="Hugo 0.87.0">
+<meta name=generator content="Hugo 0.110.0">
 <meta charset=utf-8>
-<title>Asahi Linux</title>
-<link rel=stylesheet href=/css/main.css?940d905e>
+<title>Asahi Linux</title><link rel=stylesheet href=/css/main.css?940d905e>
 <link href=https://use.fontawesome.com/releases/v5.6.1/css/all.css rel=stylesheet>
 <link rel=preconnect href=https://fonts.gstatic.com>
 <link id=favicon rel=icon href=/img/AsahiLinux_logomark_32px.png>
@@ -19,102 +18,53 @@
 <meta name=twitter:image:height content="256">
 <meta property="og:image" content="https://asahilinux.org/img/AsahiLinux_logomark_256px.png">
 <meta property="og:title" content="Asahi Linux">
-</head>
-<body class=landing>
+</head><body class=landing>
 <header id=header>
 <div class=header-logo>
 <a href=/><img src=/img/AsahiLinux_logo.svg?d619e737 class=logo alt></a>
-</div>
-<div class=header-menu>
+</div><div class=header-menu>
 <ul class="menu-container flex-container">
-<li><a href=/about>About</a></li>
-<li><a href=/community>Community</a></li>
-<li><a href=/contribute>Contribute</a></li>
-<li><a href=https://github.com/AsahiLinux>GitHub</a></li>
-<li><a href=https://github.com/AsahiLinux/docs/wiki>Wiki</a></li>
-<li><a href=/blog>Blog</a></li>
-<li><a href=/support>Donate</a></li>
-</ul>
-</div>
-</header>
-<section id=eye-catch>
+<li><a href=/about>About</a></li><li><a href=/community>Community</a></li><li><a href=/contribute>Contribute</a></li><li><a href=https://github.com/AsahiLinux>GitHub</a></li><li><a href=https://github.com/AsahiLinux/docs/wiki>Wiki</a></li><li><a href=/blog>Blog</a></li><li><a href=/support>Donate</a></li></ul></div></header><section id=eye-catch>
 <div>
 <div>
-<h1>Linux on Apple Silicon</h1>
-<p>Asahi Linux aims to bring you a polished Linux® experience on Apple Silicon Macs.</p>
-<a href=/about class=more>Learn more<i class="fas fa-angle-right more"></i></a>
-</div>
-<div>
+<h1>Linux on Apple Silicon</h1><p>Asahi Linux aims to bring you a polished Linux® experience on Apple Silicon Macs.</p><a href=/about class=more>Learn more<i class="fas fa-angle-right more"></i></a>
+</div><div>
 <img src=/img/asahilinux_laptop.svg?763d4e1d alt="Asahi Linux on a laptop">
-</div>
-</div>
-</section>
-<section id=download>
+</div></div></section><section id=download>
 <div class=center-title>
-<h1>Download</h1>
-</div>
-<div class="download-card center-card">
+<h1>Download</h1></div><div class="download-card center-card">
 <i class="big-icon fas fa-arrow-down"></i>
-<p>The Asahi Linux alpha release is out!</p>
-<a href=/2022/03/asahi-linux-alpha-release/ class=more>Check out the announcement<i class="fas fa-angle-right more"></i></a>
-</div>
-</section>
-<section id=community class=white-text>
+<p>The Asahi Linux alpha release is out!</p><a href=/2022/03/asahi-linux-alpha-release/ class=more>Check out the announcement<i class="fas fa-angle-right more"></i></a>
+</div></section><section id=community class=white-text>
 <div class=center-title>
-<h1>Community</h1>
-</div>
-<div class=community-links>
+<h1>Community</h1></div><div class=community-links>
 <div class=community-twitter>
 <div class=community-card>
 <div class=community-icons>
 <i class="big-icon fab fa-twitter"></i>
 <i class="big-icon fab fa-mastodon"></i>
-</div>
-<div class=community-text>
-<p>Follow us on Mastodon or Twitter to get announcements and other information.</p>
-</div>
-</div>
-<div class="community-button twitter-buttons">
+</div><div class=community-text>
+<p>Follow us on Mastodon or Twitter to get announcements and other information.</p></div></div><div class="community-button twitter-buttons">
 <a rel=me href=https://social.treehouse.systems/@AsahiLinux class="mastodon-button rounded-button"><i class="fab fa-mastodon"></i> @AsahiLinux<wbr>@treehouse.systems</a>
 <a rel=me href=https://twitter.com/AsahiLinux class="twitter-button rounded-button"><i class="fab fa-twitter"></i> @AsahiLinux</a>
-</div>
-</div>
-<div class=community-chat>
+</div></div><div class=community-chat>
 <div class=community-card>
 <div class=community-icons>
 <i class="big-icon fas fa-hashtag"></i>
-</div>
-<div class=community-text>
-<p>Our primary communications platform is IRC on OFTC.</p>
-</div>
-</div>
-<div class="community-button chat-button">
+</div><div class=community-text>
+<p>Our primary communications platform is IRC on OFTC.</p></div></div><div class="community-button chat-button">
 <a href=/community class=rounded-button><i class="fas fa-hashtag"></i> Channel list</a>
-</div>
-</div>
-</div>
-</section>
-<section id=contribute>
+</div></div></div></section><section id=contribute>
 <div class=center-title>
-<h1>Contribute</h1>
-</div>
-<div class="contribute-card center-card">
+<h1>Contribute</h1></div><div class="contribute-card center-card">
 <i class="big-icon fab fa-github"></i>
-<p>Asahi Linux and the open source projects it depends on are made possible by communities of volunteers. All contributors are welcome, of any skill level!</p>
-<a href=/contribute class=more>How to contribute<i class="fas fa-angle-right more"></i></a>
-</div>
-</section>
-<section id=documentation>
+<p>Asahi Linux and the open source projects it depends on are made possible by communities of volunteers. All contributors are welcome, of any skill level!</p><a href=/contribute class=more>How to contribute<i class="fas fa-angle-right more"></i></a>
+</div></section><section id=documentation>
 <div class=center-title>
-<h1>Documentation</h1>
-</div>
-<div class="documentation-card center-card">
+<h1>Documentation</h1></div><div class="documentation-card center-card">
 <i class="big-icon fas fa-book-open"></i>
-<p>We are documenting the Apple Silicon platform on our GitHub wiki.</p>
-<a href=https://github.com/AsahiLinux/docs/wiki class=more>Visit the Wiki<i class="fas fa-angle-right more"></i></a>
-</div>
-</section>
-<footer id=footer>
+<p>We are documenting the Apple Silicon platform on our GitHub wiki.</p><a href=https://github.com/AsahiLinux/docs/wiki class=more>Visit the Wiki<i class="fas fa-angle-right more"></i></a>
+</div></section><footer id=footer>
 <div class=footer-menu>
 <div class=footer-logo>
 <a href=/>
@@ -122,20 +72,7 @@
 </a>
 <span class=license>Licensed under CC BY-SA 4.0</span>
 <span class=disclaimer>Linux® is the registered trademark of Linus Torvalds in the U.S. and other countries. All other product names, logos, and brands are property of their respective owners.</span>
-</div>
-<div class=footer-links>
+</div><div class=footer-links>
 <ul class=footer-services>
-<li><a href=https://twitter.com/AsahiLinux><i class="fab fa-twitter"></i></a></li>
-<li><a href=https://github.com/AsahiLinux><i class="fab fa-github"></i></a></li>
-<li><a href=https://www.patreon.com/marcan><i class="fab fa-patreon"></i></a></li>
-</ul>
-<ul class=footer-menu-container>
-<li><a href=/about>About</a></li>
-<li><a href=/code-of-conduct>Code of Conduct</a></li>
-<li><a href=/copyright>Copyright policy</a></li>
-</ul>
-</div>
-</div>
-</footer>
-</body>
-</html>
+<li><a href=https://twitter.com/AsahiLinux><i class="fab fa-twitter"></i></a></li><li><a href=https://github.com/AsahiLinux><i class="fab fa-github"></i></a></li><li><a href=https://www.patreon.com/marcan><i class="fab fa-patreon"></i></a></li></ul><ul class=footer-menu-container>
+<li><a href=/about>About</a></li><li><a href=/code-of-conduct>Code of Conduct</a></li><li><a href=/copyright>Copyright policy</a></li></ul></div></div></footer></body></html>
