deploy: a382df290c980a9c2c5aa79b3b37528cf11717a2

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta name=generator content="Hugo 0.110.0">
 <meta charset=utf-8>
-<title>Asahi Linux</title><link rel=stylesheet href=/css/main.css?940d905e>
+<title>Asahi Linux</title><link rel=stylesheet href=/css/main.css?e3d0c6ce>
 <link href=https://use.fontawesome.com/releases/v5.6.1/css/all.css rel=stylesheet>
 <link rel=preconnect href=https://fonts.gstatic.com>
 <link id=favicon rel=icon href=/img/AsahiLinux_logomark_32px.png>
@@ -34,11 +34,18 @@
 <div class=center-title>
 <h1>Download</h1></div><div class="download-card center-card">
 <i class="big-icon fas fa-arrow-down"></i>
-<p>The Asahi Linux alpha release is out!</p><a href=/2022/03/asahi-linux-alpha-release/ class=more>Check out the announcement<i class="fas fa-angle-right more"></i></a>
-</div></section><section id=community class=white-text>
+<p>Fedora Asahi Remix is coming soon!</p><a href=https://fedora-asahi-remix.org/ class=more>Check out the beta<i class="fas fa-angle-right more"></i></a>
+<p style=font-style:italic>This is not an official release just yet, but we encourage adventurous users to give Fedora a spin!</p></div></section><section id=community class=white-text>
 <div class=center-title>
 <h1>Community</h1></div><div class=community-links>
-<div class=community-twitter>
+<div class=community-fedora>
+<div class=community-card>
+<div class=community-icons>
+<i class="big-icon fab fa-discourse"></i>
+</div><div class=community-text>
+<p>Ask questions and talk with other users on our little corner of Fedora Discussion!</p></div></div><div class="community-button discourse-button">
+<a rel=me href=https://discussion.fedoraproject.org/c/neighbors/asahi/92 class="mastodon-button rounded-button"><i class="fab fa-discourse"></i> Asahi Linux Discussion</a>
+</div></div><div class=community-twitter>
 <div class=community-card>
 <div class=community-icons>
 <i class="big-icon fab fa-mastodon"></i>
