deploy: 25144cbc6f714ffd74703f426435f34c27a655b3

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta name=generator content="Hugo 0.110.0">
 <meta charset=utf-8>
-<title>Asahi Linux</title><link rel=stylesheet href=/css/main.css?e3d0c6ce>
+<title>Asahi Linux</title><link rel=stylesheet href=/css/main.css?8ce44495>
 <link href=https://use.fontawesome.com/releases/v5.6.1/css/all.css rel=stylesheet>
 <link rel=preconnect href=https://fonts.gstatic.com>
 <link id=favicon rel=icon href=/img/AsahiLinux_logomark_32px.png>
@@ -28,14 +28,14 @@
 <div>
 <div>
 <h1>Linux on Apple Silicon</h1><p>Asahi Linux aims to bring you a polished Linux® experience on Apple Silicon Macs.</p><a href=/about class=more>Learn more<i class="fas fa-angle-right more"></i></a>
-</div><div>
+<h2>Install from macOS</h2><pre><code id=curl>curl https://alx.sh | sh</code> <a id=copy-button href=#><i class="fa fa-clipboard"></i></code></a></pre><h3><a class=more href=/fedora/#device-support>Device support<i class="fas fa-angle-right more"></i></a></h3></div><div>
 <img src=/img/asahilinux_laptop.svg?763d4e1d alt="Asahi Linux on a laptop">
 </div></div></section><section id=download>
 <div class=center-title>
-<h1>Download</h1></div><div class="download-card center-card">
+<h1><a class=stealth href=/fedora>Download</a></h1></div><div class="download-card center-card">
 <i class="big-icon fas fa-arrow-down"></i>
-<p>Fedora Asahi Remix is coming soon!</p><a href=https://fedora-asahi-remix.org/ class=more>Check out the beta<i class="fas fa-angle-right more"></i></a>
-<p style=font-style:italic>This is not an official release just yet, but we encourage adventurous users to give Fedora a spin!</p></div></section><section id=community class=white-text>
+<p>Fedora Asahi Remix is now released!</p><a href=/fedora class=more>Read the announcement<i class="fas fa-angle-right more"></i></a>
+</div></section><section id=community class=white-text>
 <div class=center-title>
 <h1>Community</h1></div><div class=community-links>
 <div class=community-fedora>
