deploy: 05277372f71fdc529b99484ed4c50de3a7da4f57

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 <h1>Documentation</h1></div><div class="documentation-card center-card">
 <i class="big-icon fas fa-book-open"></i>
 <p>We are documenting the Apple Silicon platform on our GitHub wiki.</p><a href=https://github.com/AsahiLinux/docs/wiki class=more>Visit the Wiki<i class="fas fa-angle-right more"></i></a>
-</div></section><footer id=footer>
+</div></section><script>document.addEventListener("DOMContentLoaded",function(){var e=document.getElementById("copy-button");e.onmouseover=function(){e.firstChild.classList.remove("fa-check"),e.firstChild.classList.add("fa-clipboard")},e.onclick=function(t){var n=document.getElementById("curl");window.getSelection().selectAllChildren(n),navigator.clipboard.writeText(n.textContent),e.firstChild.classList.add("fa-check"),e.firstChild.classList.remove("fa-clipboard"),t.preventDefault()}})</script>
+<footer id=footer>
 <div class=footer-menu>
 <div class=footer-logo>
 <a href=/>
