--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <a href=/><img src=/img/AsahiLinux_logo.svg?d619e737 class=logo alt></a>
 </div><div class=header-menu>
 <ul class="menu-container flex-container">
-<li><a href=/about>About</a></li><li><a href=/community>Community</a></li><li><a href=/contribute>Contribute</a></li><li><a href=/governance>Governance</a></li><li><a href=https://github.com/AsahiLinux>GitHub</a></li><li><a href=https://github.com/AsahiLinux/docs/wiki>Wiki</a></li><li><a href=/blog>Blog</a></li><li><a href=/support>Donate</a></li></ul></div></header><section id=eye-catch>
+<li><a href=/about>About</a></li><li><a href=/community>Community</a></li><li><a href=/contribute>Contribute</a></li><li><a href=/governance>Governance</a></li><li><a href=/docs>Documentation</a></li><li><a href=https://github.com/AsahiLinux>GitHub</a></li><li><a href=/blog>Blog</a></li><li><a href=/support>Donate</a></li></ul></div></header><section id=eye-catch>
 <div>
 <div>
 <h1>Linux on Apple Silicon</h1><p>Asahi Linux aims to bring you a polished Linux® experience on Apple Silicon Macs.</p><a href=/about class=more>Learn more<i class="fas fa-angle-right more"></i></a>
@@ -69,7 +69,7 @@
 <div class=center-title>
 <h1>Documentation</h1></div><div class="documentation-card center-card">
 <i class="big-icon fas fa-book-open"></i>
-<p>We are documenting the Apple Silicon platform on our GitHub wiki.</p><a href=https://github.com/AsahiLinux/docs/wiki class=more>Visit the Wiki<i class="fas fa-angle-right more"></i></a>
+<p>We are documenting the Apple Silicon platform on our documentation website.</p><a href=/docs class=more>Read the documentation<i class="fas fa-angle-right more"></i></a>
 </div></section><script>document.addEventListener("DOMContentLoaded",function(){var e=document.getElementById("copy-button");e.onmouseover=function(){e.firstChild.classList.remove("fa-check"),e.firstChild.classList.add("fa-clipboard")},e.onclick=function(t){var n=document.getElementById("curl");window.getSelection().selectAllChildren(n),navigator.clipboard.writeText(n.textContent),e.firstChild.classList.add("fa-check"),e.firstChild.classList.remove("fa-clipboard"),t.preventDefault()}})</script>
 <footer id=footer>
 <div class=footer-menu>
