--- a/support/index.html
+++ b/support/index.html
@@ -24,7 +24,7 @@
 <a href=/><img src=/img/AsahiLinux_logo.svg?d619e737 class=logo alt></a>
 </div><div class=header-menu>
 <ul class="menu-container flex-container">
-<li><a href=/about>About</a></li><li><a href=/community>Community</a></li><li><a href=/contribute>Contribute</a></li><li><a href=/governance>Governance</a></li><li><a href=https://github.com/AsahiLinux>GitHub</a></li><li><a href=https://github.com/AsahiLinux/docs/wiki>Wiki</a></li><li><a href=/blog>Blog</a></li><li><a href=/support>Donate</a></li></ul></div></header><section id=post-section>
+<li><a href=/about>About</a></li><li><a href=/community>Community</a></li><li><a href=/contribute>Contribute</a></li><li><a href=/governance>Governance</a></li><li><a href=/docs>Documentation</a></li><li><a href=https://github.com/AsahiLinux>GitHub</a></li><li><a href=/blog>Blog</a></li><li><a href=/support>Donate</a></li></ul></div></header><section id=post-section>
 <div class=post-wrapper>
 <div class=post>
 <h1 id=support-asahi-linux>Support Asahi Linux</h1><p>The Asahi Linux project is funded by individuals like you. If you would like to support us financially, head over to our project <a href=https://opencollective.com/asahilinux>Open Collective</a>.</p><p>Porting Linux to Apple Silicon is no small task. Financial support will allow
