deploy: 5c953f7581604a78d657d7123df6849caff99c00

--- a/support/index.html
+++ b/support/index.html
@@ -24,10 +24,10 @@
 <a href=/><img src=/img/AsahiLinux_logo.svg?d619e737 class=logo alt></a>
 </div><div class=header-menu>
 <ul class="menu-container flex-container">
-<li><a href=/about>About</a></li><li><a href=/community>Community</a></li><li><a href=/contribute>Contribute</a></li><li><a href=/governance>Governance</a></li><li><a href=/docs>Documentation</a></li><li><a href=https://github.com/AsahiLinux>GitHub</a></li><li><a href=/blog>Blog</a></li><li><a href=/support>Donate</a></li></ul></div></header><section id=post-section>
+<li><a href=/about>About</a></li><li><a href=/community>Community</a></li><li><a href=/contribute>Contribute</a></li><li><a href=/governance>Governance</a></li><li><a href=/docs>Documentation</a></li><li><a href=https://github.com/AsahiLinux>GitHub</a></li><li><a href=/blog>Blog</a></li><li><a href=/merch>Merch</a></li><li><a href=/support>Donate</a></li></ul></div></header><section id=post-section>
 <div class=post-wrapper>
 <div class=post>
-<h1 id=support-asahi-linux>Support Asahi Linux</h1><p>The Asahi Linux project is funded by individuals like you. If you would like to support us financially, head over to our project <a href=https://opencollective.com/asahilinux>Open Collective</a>.</p><p>Porting Linux to Apple Silicon is no small task. Financial support will allow
+<h1 id=support-asahi-linux>Support Asahi Linux</h1><p>The Asahi Linux project is funded by individuals like you. If you would like to support us financially, head over to our project <a href=https://opencollective.com/asahilinux>Open Collective</a> or to our <a href=https://github.com/sponsors/AsahiLinux>GitHub Sponsors</a>. You can also <a href=/merch>buy Asahi Linux merch</a>, which supports the project with each sale.</p><p>Porting Linux to Apple Silicon is no small task. Financial support will allow
 us to buy hardware and fund contributors, allowing the project to advance at a
 steady pace and ensure that everything is paid the proper attention.</p></div></div></section><footer id=footer>
 <div class=footer-menu>
