--- a/community/index.html
+++ b/community/index.html
@@ -24,7 +24,7 @@
 <a href=/><img src=/img/AsahiLinux_logo.svg?d619e737 class=logo alt></a>
 </div><div class=header-menu>
 <ul class="menu-container flex-container">
-<li><a href=/about>About</a></li><li><a href=/community>Community</a></li><li><a href=/contribute>Contribute</a></li><li><a href=/governance>Governance</a></li><li><a href=/docs>Documentation</a></li><li><a href=https://github.com/AsahiLinux>GitHub</a></li><li><a href=/blog>Blog</a></li><li><a href=/support>Donate</a></li></ul></div></header><section id=post-section>
+<li><a href=/about>About</a></li><li><a href=/community>Community</a></li><li><a href=/contribute>Contribute</a></li><li><a href=/governance>Governance</a></li><li><a href=/docs>Documentation</a></li><li><a href=https://github.com/AsahiLinux>GitHub</a></li><li><a href=/blog>Blog</a></li><li><a href=/merch>Merch</a></li><li><a href=/support>Donate</a></li></ul></div></header><section id=post-section>
 <div class=post-wrapper>
 <div class=post>
 <h1 id=community>Community</h1><p>If you&rsquo;re interested in the project, you&rsquo;re welcome to drop by! Check out <a href=/contribute>ways in which you can contribute</a>.</p><p>Please remember that all community members are expected to abide by our <a href=/code-of-conduct>Code of Conduct</a>.</p><h2 id=irc>IRC</h2><p>Most development and project discussion takes place on IRC. We have several channels on the OFTC IRC network:</p><ul>
