--- a/fedora/index.html
+++ b/fedora/index.html
@@ -24,7 +24,7 @@
 <a href=/><img src=/img/AsahiLinux_logo.svg?d619e737 class=logo alt></a>
 </div><div class=header-menu>
 <ul class="menu-container flex-container">
-<li><a href=/about>About</a></li><li><a href=/community>Community</a></li><li><a href=/contribute>Contribute</a></li><li><a href=/governance>Governance</a></li><li><a href=/docs>Documentation</a></li><li><a href=https://github.com/AsahiLinux>GitHub</a></li><li><a href=/blog>Blog</a></li><li><a href=/support>Donate</a></li></ul></div></header><section id=eye-catch>
+<li><a href=/about>About</a></li><li><a href=/community>Community</a></li><li><a href=/contribute>Contribute</a></li><li><a href=/governance>Governance</a></li><li><a href=/docs>Documentation</a></li><li><a href=https://github.com/AsahiLinux>GitHub</a></li><li><a href=/blog>Blog</a></li><li><a href=/merch>Merch</a></li><li><a href=/support>Donate</a></li></ul></div></header><section id=eye-catch>
 <div>
 <div>
 <p>Introducing</p><h1>Fedora Asahi Remix</h1><p>The most polished Linux® for Apple Silicon Macs.</p><h2>Install from macOS</h2><pre><code id=curl>curl https://alx.sh | sh</code> <a id=copy-button href=#><i class="fa fa-clipboard"></i></code></a></pre></div><div>
